--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -1282,7 +1282,8 @@ r &=& 0.10 \hspace{0.1cm} m
 \subsection{Modelo Cinemático}
 Se realizaron tres simulaciones. Las tres se diferencian porque se tiene el mismo proceso pero con entradas distintas. Primero se explica el proceso, y luego las entradas. 
 
-Se recibe la velocidad traslacional requerida del punto descentralizado $\mathbf{p_d}(t)$. Este vector se utiliza como la entrada al modelo del punto descentralizado inverso. De esta manera se obtienen las velocidades en las ruedas $\mathbf{\dot{\varphi}}(t)$ requeridas para lograr las velocidades de entrada. Esta velocidad, en algunos casos puede tener puntos de discontinuidades, que provocan una derivada infinita. Como es sabido que esto no es posible en el mundo real, entonces se pasa la señal de las ruedas por un sistema cuya función de transferencia es $\frac{10}{s+10}$. De esta manera se logra suavizar la función, y evitar una salida que sea imposible en la realidad. Una vez, se tienen estas velocidades ($\mathbf{\dot{\varphi_S}}(t)$), entonces e utilizan como la entrada a los modelos directos. De esta manera se obtiene la velocidad del centor del robot $\mathbf{\nu_S}(t)$, y la velocidad del punto descentralizado $\mathbf{\dot{p_{e_S}}}(t)$,que generan las velocidades de las ruedas suavizadas. Finalmente se integran $\mathbf{\nu_S}(t)$ y $\mathbf{\dot{p_{e_S}}}(t)$, para obtener la posición del robot a travez del tiempo. Un resumen de la simulación se muestra en la figura \ref{fig:simulacion_flow}. El proceso de suavizar la función de las ruedas es importante porque luego se utilizó como entrada del modelo dinámico, y no se pueden tener entradas de aceleración infinita. 
+
+Se recibe la velocidad traslacional requerida del punto descentralizado $\mathbf{p_d}(t)$. Este vector se utiliza como la entrada al modelo del punto descentralizado inverso. De esta manera se obtienen las velocidades en las ruedas $\mathbf{\dot{\varphi}}(t)$ requeridas para lograr las velocidades de entrada. Esta velocidad, en algunos casos puede tener puntos de discontinuidades, que provocan una derivada infinita. Como es sabido que esto no es posible en el mundo real, entonces se pasa la señal de las ruedas por un sistema cuya función de transferencia es $\frac{10}{s+10}$. De esta manera se logra suavizar la función, y evitar una salida que sea imposible en la realidad. Una vez, se tienen estas velocidades ($\mathbf{\dot{\varphi_S}}(t)$), entonces e utilizan como la entrada a los modelos directos. De esta manera se obtiene la velocidad del centro del robot $\mathbf{\nu_S}(t)$, y la velocidad del punto descentralizado $\mathbf{\dot{p_{e_S}}}(t)$,que generan las velocidades de las ruedas suavizadas. Finalmente se integran $\mathbf{\nu_S}(t)$ y $\mathbf{\dot{p_{e_S}}}(t)$, para obtener la posición del robot a través del tiempo. Un resumen de la simulación se muestra en la figura \ref{fig:simulacion_flow}. El proceso de suavizar la función de las ruedas es importante porque luego se utilizó como entrada del modelo dinámico, y no se pueden tener entradas de aceleración infinita.  
 
 
 \begin{figure}
@@ -1292,24 +1293,24 @@ Se recibe la velocidad traslacional requerida del punto descentralizado $\mathbf
 	\label{fig:simulacion_flow}
 \end{figure}
 
-En cada simulación el robot describió una trayectoria distinta, y esta trayectoria defina la entrada. En la primera fue una trayectoria cuadrada a rapidez constante, la segunda es una trayectoria circular a rapidez constante, y la tercera es una trayectoria cuadrada pero con desaceleración quendo el robot se acerca a las esqinas del cuadrado. En todos los casos, el robot comienza en el origen con $\theta=0$. Además se utilizan los parámetros en el apéndice. %PONER LA CITA
+En cada simulación el robot describió una trayectoria distinta, y esta trayectoria defina la entrada. En la primera fue una trayectoria cuadrada a rapidez constante, la segunda es una trayectoria circular a rapidez constante, y la tercera es una trayectoria cuadrada pero con desaceleración cuando el robot se acerca a las esquinas del cuadrado. En todos los casos, el robot comienza en el origen con $\theta=0$. Además se utilizan los parámetros que se toman del robot real.
 
 \subsubsection{Primera simulación: trayectoria cuadrada}
 
-Para poder generar la primera trayectoria se utilizan escalones en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_cuadrado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada} se mestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada} y \ref{fig:evaluacion_de_la_restriccion_cuadrado}. 
+Para poder generar la primera trayectoria se utilizan escalones en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_cuadrado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada} se muestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada} y \ref{fig:evaluacion_de_la_restriccion_cuadrado}. 
 
 \begin{equation}
 \mathbf{\dot{p_d}}(t)=\left[\begin{array}{c}\mu(t-5)-\mu(t-10)-\mu(t-15)\\ \mu(t)-\mu(t-5)-\mu(t-10)+\mu(t-15) \end{array}\right]
 \label{eq:entrada_cuadrado}
 \end{equation}
 
-La salida del modelo inverso del punto descentralizado se muestra en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}. Note que cuando el robot llega a las esquinas de la trayectoria, se tienen discontinuidades en las velocidades de las ruedas. Esto es en 0s, 5s, 10s, 15s. En cada uno de ellos el robot debe realizar un giro de $90^\circ$ a rapidez constante, y es lo que provocan las disconrinuidades. En la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado} se muestra la señal suavizada. en esta se evitan las discotinuidades de la salida del modelo inverso. Note que as discontinuidades indican aceleraciones infinitas, por lo que es imposible para un robot realizar una trayectoria cuadrada perfecta a rapidez constante. Este resultado es el esperado para el sistema que se está simulando. 
+La salida del modelo inverso del punto descentralizado se muestra en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}. Note que cuando el robot llega a las esquinas de la trayectoria, se tienen discontinuidades en las velocidades de las ruedas. Esto es en 0s, 5s, 10s, 15s. En cada uno de ellos el robot debe realizar un giro de $90^\circ$ a rapidez constante, y es lo que provocan las discontinuidades. En la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado} se muestra la señal suavizada. en esta se evitan las discontinuidades de la salida del modelo inverso. Note que las discontinuidades indican aceleraciones infinitas, por lo que es imposible para un robot realizar una trayectoria cuadrada perfecta a rapidez constante. Este resultado es el esperado para el sistema que se está simulando. 
 
-Note tambien que la salida de las ruedas es la esperada, dada la trayectoria que se debe seguir. por ejemplo, cada vez que el robot gira a la derecha (5s, 10s, 15s) se espera un aumento en la velocidad de la rueda izquierda y una disminución de la rueda derecha. Además, cuando no se realizan giros, sino que se sigue una trayectoria recta, se espera ue las velocidades tiendan a un mismo valor. Estos resultados soniciden son los que se muestran en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}.
+Note también que la salida de las ruedas es la esperada, dada la trayectoria que se debe seguir. por ejemplo, cada vez que el robot gira a la derecha (5s, 10s, 15s) se espera un aumento en la velocidad de la rueda izquierda y una disminución de la rueda derecha. Además, cuando no se realizan giros, sino que se sigue una trayectoria recta, se espera que las velocidades tienden a un mismo valor. Estos resultados soniciden son los que se muestran en la figura \ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado}.
 
-La función de las velocidades angulares de las ruedas suavizadas (figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}), se utiliza como la entrada para el modelo directo del punto descentralizado. Note que estas velocidades ya no son las que producen la trayectoria cuadrada perfecta, sino que se espera una trayectoria similar, pero deformada (se le llama $\phi$). En la figura   \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado} se muestra el resultado de la posición del punto descentralizado a través del tiempo, provocado por las velocidades de la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}. Cuando $\phi$ describe porciones rectas, coincide con el cuadrado, sin embargo en las esquinas, se presentan cambios. Se debe notar que $\phi$ tiene sus esquinas redondeadas. Esto se debe al suavizamiento que se le realiza a la entrada del sistema. Este resultado es el esperado. Ya que las diferencias más grandes entre las velocidades de las fuedas, y las velocidades suavizadas (ver figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada}) se dan cuando el robot se encuentra en als esquinas. Entonces las trayectorias descritas por el robot, deben tener mayores diferencias en las esquinas.
+La función de las velocidades angulares de las ruedas suavizadas (figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}), se utiliza como la entrada para el modelo directo del punto descentralizado. Note que estas velocidades ya no son las que producen la trayectoria cuadrada perfecta, sino que se espera una trayectoria similar, pero deformada (se le llama $\phi$). En la figura   \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado} se muestra el resultado de la posición del punto descentralizado a través del tiempo, provocado por las velocidades de la figura \ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado}. Cuando $\phi$ describe porciones rectas, coincide con el cuadrado, sin embargo en las esquinas, se presentan cambios. Se debe notar que $\phi$ tiene sus esquinas redondeadas. Esto se debe al suavizamiento que se le realiza a la entrada del sistema. Este resultado es el esperado. Ya que las diferencias más grandes entre las velocidades de las ruedas, y las velocidades suavizadas (ver figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada}) se dan cuando el robot se encuentra en las esquinas. Entonces las trayectorias descritas por el robot, deben tener mayores diferencias en las esquinas.
 
-Finalmente se analiza el resultado del centro del robot. Las velocidades suavizadas de las ruedas son la entrada al modelo directo del punto central del robot. Es de esperarse que la trayectoria que describe el punto central del robot no sea la misma que la que describe el punto descentralizado, ya que con el método del punto descentralizado no se puede controlar la orientación. Sin embargo se evidente que cuando el robot describe trayectorias rectas, la posición del centro del robot se apoxima a la trayectoria del punto descentralizado. Además la orientación del robot cada vez se asemeja más a la que describe la trayectoria del punto descentralizado. Con este resultado se comprueba la validez del modelo del punto descentralizado, ya que sí logra describir una buena aproximación de la posición del robot. Cuando el robot realiza un giro se evidencia una direfencia entre el centro del robot y la trayectoria cuadrada, pero este se corrige cuando el robot se mueve en la  porción recta. TOmando en cuanta el análisis cuantitativo, se mide de las gráficas en \ref{fig:velocidades_ruedas_trayectoria_cuadrada} que la velocidad de las ruedas es de $10 rad/s$ en los trayectos rectos. Como  el radio de las ruedas cumple que $r=0.1$, y no se consideran deslizamientos de las ruedas. Entocnes se obtiene una velocidad traslacional de $1m/s$, que es exactamente la que se introduce como entrada.  
+Finalmente se analiza el resultado del centro del robot. Las velocidades suavizadas de las ruedas son la entrada al modelo directo del punto central del robot. Es de esperarse que la trayectoria que describe el punto central del robot no sea la misma que la que describe el punto descentralizado, ya que con el método del punto descentralizado no se puede controlar la orientación. Sin embargo es evidente que cuando el robot describe trayectorias rectas, la posición del centro del robot se aproxima a la trayectoria del punto descentralizado. Además la orientación del robot cada vez se asemeja más a la que describe la trayectoria del punto descentralizado. Con este resultado se comprueba la validez del modelo del punto descentralizado, ya que sí logra describir una buena aproximación de la posición del robot. Cuando el robot realiza un giro se evidencia una diferencia entre el centro del robot y la trayectoria cuadrada, pero este se corrige cuando el robot se mueve en la  porción recta. TOmando en cuenta el análisis cuantitativo, se mide de las gráficas en \ref{fig:velocidades_ruedas_trayectoria_cuadrada} que la velocidad de las ruedas es de $10 rad/s$ en los trayectos rectos. Como  el radio de las ruedas cumple que $r=0.1$, y no se consideran deslizamientos de las ruedas. Entonces se obtiene una velocidad traslacional de $1m/s$, que es exactamente la que se introduce como entrada.   
 
 
 %**********Entradas de las simulaciones*******************************************************************
@@ -1377,13 +1378,14 @@ Para poder generar la segunda trayectoria se utilizan funciones trigonométricas 
 \label{eq:entrada_circular}
 \end{equation}
 
-En esta simulación, a diferencia de la primera, la trayectoria se completa más de una vez. Esto se debe a que la trayectoria del centro del robot no llega a coincidir con la trayectoria del punto descentralizado (ver figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}), entonces se hace al robot girar más veces sobre la trayectoria, para averiguar si esta condición cambia cuando t aumenta. Se completan poco más de tres revoluciones, y no se observan cambios en la condición descrita. SE pueden apreciar puntos de corte entre las trayectorias, pero no se tiene un comportamiento asintótico, que sí se tiene en los trayectos rectos. Se puede apreciar que en general, la trayectoria del centro del robot se encuentra adentro de la trayectoria del punto descentralizado (los que se obtienen de los modelos directos). En la figura \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, se nota que cuando el robot gira, la trayectoria del centro, se encuentra hacia adentro. Si se considera al círculo como un giro contínuo, entonces ambos resultados son consistentes. %Sinembargo, note que como el círculo es lo suficientemente grande, entonces ambas trayectorias están cercanas, ya que entre mayor sea el radio del círculo, mayor será su semajanza con una trayectoria recta, y por tanto las trayectorias del dentro y eñl punto descentralizado se vana a asemejar más.  
 
-  También se debe analizar lo que se muestra en la figura \ref{fig:velocidades_ruedas_trayectoria_circulo}. Estas son las velocidades angulares de las reedas que generan las trayectorias en la figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}. Estas presentan el comportamiento esperado. Al inicio se tiene un comportamiento con aceleraciones elevadas, esto se debe a que el robot se encuentra perpendicular a la trayectoria. Sin embargo, conforme avanza el tiempo, las velocidades se estabilizan en un valor, que es lo que permite que se describa el círculo. De las gáfiacas, se miden los valores donde se estabilizan las velocidades angulares de las ruedas, y se obtiene $27.7rad/s$ para la rueda izquierda, y $12.27rad/s$ para la rueda derecha. Note que como el robot se encuentra avanzando hacia su frente, entonces se esperan valores positivos, y como el robot gira hacia su derecha, se espera qeu la velocidad de la rueda izquierda sea mayor. 
+En esta simulación, a diferencia de la primera, la trayectoria se completa más de una vez. Esto se debe a que la trayectoria del centro del robot no llega a coincidir con la trayectoria del punto descentralizado (ver figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}), entonces se hace al robot girar más veces sobre la trayectoria, para averiguar si esta condición cambia cuando t aumenta. Se completan poco más de tres revoluciones, y no se observan cambios en la condición descrita. SE pueden apreciar puntos de corte entre las trayectorias, pero no se tiene un comportamiento asintótico, que sí se tiene en los trayectos rectos. Se puede apreciar que en general, la trayectoria del centro del robot se encuentra dentro de la trayectoria del punto descentralizado (los que se obtienen de los modelos directos). En la figura \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado}, se nota que cuando el robot gira, la trayectoria del centro, se encuentra hacia adentro. Si se considera al círculo como un giro contínuo, entonces ambos resultados son consistentes. %Sinembargo, note que como el círculo es lo suficientemente grande, entonces ambas trayectorias están cercanas, ya que entre mayor sea el radio del círculo, mayor será su semejanza con una trayectoria recta, y por tanto las trayectorias del dentro y el punto descentralizado se vana a asemejar más.  
 
-Ahora, respecto al valor numérico de estos vfalores finales, se debe conciderar que estos se tienen cuando ya el robot se encuentra describiendo un círculo. De la figura  \ref{fig:posicion_del_robot_modelo_cinematico_circulo} se puede concluir que el radio $R$ de la trayectoria circular que describe el centro del robot es aproximadamente $1.977m$ (midiendo los extremos de la posición en y). De la ecuación (\ref{eq:entrada_circular}), se sabe que la magnitud de la velocidad tangencial al círculo del robot viene dada por $v_0=\sqrt{4\cos^2(t)+4\sen^2(t)}=2$. Se concidera a $\rho$ como la velocidad angular alrededor del círculo, entonces se tiene que $\rho=v_0/R=1.012 rad/s$. 
+  También se debe analizar lo que se muestra en la figura \ref{fig:velocidades_ruedas_trayectoria_circulo}. Estas son las velocidades angulares de las ruedas que generan las trayectorias en la figura \ref{fig:posicion_del_robot_modelo_cinematico_circulo}. Estas presentan el comportamiento esperado. Al inicio se tiene un comportamiento con aceleraciones elevadas, esto se debe a que el robot se encuentra perpendicular a la trayectoria. Sin embargo, conforme avanza el tiempo, las velocidades se estabilizan en un valor, que es lo que permite que se describa el círculo. De las gáfiacas, se miden los valores donde se estabilizan las velocidades angulares de las ruedas, y se obtiene $27.7rad/s$ para la rueda izquierda, y $12.27rad/s$ para la rueda derecha. Note que como el robot se encuentra avanzando hacia su frente, entonces se esperan valores positivos, y como el robot gira hacia su derecha, se espera qeu la velocidad de la rueda izquierda sea mayor. 
 
-Como el robot diferencial tiene la restricción que solo se puede mover hacia el frente (o hacia atrás pero no hacia los lados). Se puede suponer que el robot se encentra perpendicular al radio de la trayectoria circular. Se sabe que el ancho del robot es $1.5m$, enotnces la trayectoria que describe la rueda derecha tiene un radio de $R_r=R-0.75=1.25m$, y la rueda izquierda de $R_l=R+0.75=2.75m$. Conociendo la velocidad angular y el radio de cada rueda, se determina la velocidad traslacional. $v_r=\rho R_r= 1.265m/s$, y $v_l=\rho R_l= 2.783m/s$. Tomando en centa que $r=0.01$. se obtiene que la velocidad de la ruda derecha debe ser $27.83rad/s$, y en la izquierda $12.65rad/s$. Estos valores son muy cercanos a los obtenidos en la simulación, entocnes los resultados simulados son los esperados para el sistema en cuestión. 
+Ahora, respecto al valor numérico de estos valores finales, se debe considerar que estos se tienen cuando ya el robot se encuentra describiendo un círculo. De la figura  \ref{fig:posicion_del_robot_modelo_cinematico_circulo} se puede concluir que el radio $R$ de la trayectoria circular que describe el centro del robot es aproximadamente $1.977m$ (midiendo los extremos de la posición en y). De la ecuación (\ref{eq:entrada_circular}), se sabe que la magnitud de la velocidad tangencial al círculo del robot viene dada por $v_0=\sqrt{4\cos^2(t)+4\sen^2(t)}=2$. Se considera a $\rho$ como la velocidad angular alrededor del círculo, entonces se tiene que $\rho=v_0/R=1.012 rad/s$. 
+
+Como el robot diferencial tiene la restricción que solo se puede mover hacia el frente (o hacia atrás pero no hacia los lados). Se puede suponer que el robot se encuentra perpendicular al radio de la trayectoria circular. Se sabe que el ancho del robot es $1.5m$, entonces la trayectoria que describe la rueda derecha tiene un radio de $R_r=R-0.75=1.25m$, y la rueda izquierda de $R_l=R+0.75=2.75m$. Conociendo la velocidad angular y el radio de cada rueda, se determina la velocidad traslacional. $v_r=\rho R_r= 1.265m/s$, y $v_l=\rho R_l= 2.783m/s$. Tomando en cuenta que $r=0.01$. se obtiene que la velocidad de la ruda derecha debe ser $27.83rad/s$, y en la izquierda $12.65rad/s$. Estos valores son muy cercanos a los obtenidos en la simulación, entonces los resultados simulados son los esperados para el sistema en cuestión.
 
 
 
@@ -1428,9 +1430,17 @@ Para poder generar la primera trayectoria se utilizan escalones en la entrada. L
 \label{eq:entrada_cuadrado_suavizado}
 \end{equation}
 
-Esta simulación se realiza como un método alternativo para evitar las discotinuidades en las velocidades angulares de las ruedas. Se construye la entrada de manera que se describa una trayectoria cuadrada, pero que el robot desacelere cuando se acerca a las esquinas del cuadrado. Para evitar los cambios abruptos en las velocidades de los motores, se espera que en cada esquina la velocidad traslacional del robot sea nula. Como se desea constrir una trayectoria cuadrada, en periodos no se tiene traslacion en x, y en otors periodos no se tien traslacion en y. Estos cambios ocurren al llegal a las esquinas, enotnces la señal de entrada debe tener una derivada de 0 al llegar a una esquina. En síntesis se necesita una señal de entrada que sea contínua, pueda describir una trayecotria cuadrada, y su derivada sea también contínua. ESto se logra con la función en \ref{eq:entrada_cuadrado_suavizado}. Que la entrada pueda describir una trayectoria cuadrada, se logra con los escalones, para evitar desplazamiento en ambas dimensiones al mismo tiempo. Y la continuidad de la función y su derivada, se logra con la parte de los cosenos. De la figura \ref{eq:entrada_cuadrado_suavizado} es evidente que la función de entrada cumple con los requerimientos. 
+Para poder generar la primera trayectoria se utilizan escalones en la entrada. La velocidad de la trayectoria viene dada por (\ref{eq:entrada_cuadrado_suavizado}). De esta manera se logra describir una trayectoria cuadrada con rapidez constante (durante 20s). En la figura \ref{fig:entrada_trayectoria_cuadrada_suavizada} se muestra la entrada contra el tiempo. Luego de pocesar la entrada como se indica en la figura \ref{fig:simulacion_flow}, se obtienen los resultados en las figuras \ref{fig:posicion_del_robot_modelo_cinematico_cuadrado_suavizado}, \ref{fig:velocidades_ruedas_trayectoria_cuadrada_suavizado}, \ref{fig:evaluacion_de_la_restriccion_cuadrado}, y \ref{fig:zoom_trayectoria_cuadrada_suavizada}. 
 
-De las gráficas que se presentan en la figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada_suavizado}, se nota que no tienen discotinuidades, por lo que con la entrada propuesta se logran tener velocidades en las ruedas cuya aceleración sea finita en todo punto. Además cabe destacar que ambas gráficas (\ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado_suavizado} y\ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado_suavizado}) presentan comportamientos sumamente parecidos. Esto significa que los comandos que envía el robot a sus motores son muy cercanos a los que se necesitan para poder describir la trayectoria cuadrada con su punto descentralizado. Este hecho se hace evidente al observar la figura \ref{fig:zoom_trayectoria_cuadrada_suavizada}. En esta se presenta una porción de la trayectoria, que muestra una esquina. Se debe notar que en este caso (a diferencia de la trayectoria cuadrada a rapidez constante), el robot sí puede describir el giro de $90^\circ$ que se requiere para tener un cuadrado.  Por otra parte, el comportamiento del centro del robot es asintótico al del punto descentralizado, cuando se tienen trayectorias rectas. 
+\begin{equation}
+\mathbf{\dot{p_d}}(t)=\left[\begin{array}{c}(\mu(t-5)-\mu(t-10))(1-\cos(\pi (t-5)/5))-\mu(t-15)(1-\cos(\pi (t-15)/5))\\
+ (\mu(t)-\mu(t-5))(1-\cos(\pi t/5))-(\mu(t-10)+\mu(t-15))(1-\cos(\pi (t-10)/5)) \end{array}\right]
+\label{eq:entrada_cuadrado_suavizado}
+\end{equation}
+
+Esta simulación se realiza como un método alternativo para evitar las discontinuidades en las velocidades angulares de las ruedas. Se construye la entrada de manera que se describa una trayectoria cuadrada, pero que el robot desacelera cuando se acerca a las esquinas del cuadrado. Para evitar los cambios abruptos en las velocidades de los motores, se espera que en cada esquina la velocidad traslacional del robot sea nula. Como se desea construir una trayectoria cuadrada, en periodos no se tiene traslación en x, y en otros periodos no se tiene traslación en y. Estos cambios ocurren al llegar a las esquinas, entonces la señal de entrada debe tener una derivada de 0 al llegar a una esquina. En síntesis se necesita una señal de entrada que sea contínua, pueda describir una trayectoria cuadrada, y su derivada sea también contínua. ESto se logra con la función en \ref{eq:entrada_cuadrado_suavizado}. Que la entrada pueda describir una trayectoria cuadrada, se logra con los escalones, para evitar desplazamiento en ambas dimensiones al mismo tiempo. Y la continuidad de la función y su derivada, se logra con la parte de los cosenos. De la figura \ref{eq:entrada_cuadrado_suavizado} es evidente que la función de entrada cumple con los requerimientos. 
+
+De las gráficas que se presentan en la figura \ref{fig:velocidades_ruedas_trayectoria_cuadrada_suavizado}, se nota que no tienen discontinuidades, por lo que con la entrada propuesta se logran tener velocidades en las ruedas cuya aceleración sea finita en todo punto. Además cabe destacar que ambas gráficas (\ref{fig:velocidad_de_las_ruedas_obtenidas_del_modelo_inverso_cuadrado_suavizado} y\ref{fig:velocidad_de_las_ruedas_con_limitantes_de_aceleracion_cuadrado_suavizado}) presentan comportamientos sumamente parecidos. Esto significa que los comandos que envía el robot a sus motores son muy cercanos a los que se necesitan para poder describir la trayectoria cuadrada con su punto descentralizado. Este hecho se hace evidente al observar la figura \ref{fig:zoom_trayectoria_cuadrada_suavizada}. En esta se presenta una porción de la trayectoria, que muestra una esquina. Se debe notar que en este caso (a diferencia de la trayectoria cuadrada a rapidez constante), el robot sí puede describir el giro de $90^\circ$ que se requiere para tener un cuadrado.  Por otra parte, el comportamiento del centro del robot es asintótico al del punto descentralizado, cuando se tienen trayectorias rectas. 
  
 
 %******Posicion trayectoria cuadrada suavizada**************************************************************
@@ -1474,12 +1484,11 @@ De las gráficas que se presentan en la figura \ref{fig:velocidades_ruedas_trayec
 
 \subsection{Los errores de resticciones}
 
-El modelo dinámico tieneuna restricción en la deirección del movimento. La que se expresa en la ecuación (\ref{eq:restriccion_1}). Sin embargo esta restircción nos e define para el modelo cinemático. Esta es una limitación en el movimeinto del robot, por lo que es importante comprobar que la salida del modelo cineático sea consistente con als restricciones naturales del sistema. Para esto se ibtiene la magnitud e la velocidad del robot y se calcula la expresión en (\ref{eq:restriccion_1}), sin igualar a cero, sinoq que se calcula el valor. Este resltado se grafica para las 3 simulaciones, y se presenta en las figuras \ref{fig:evaluacion_de_la_restriccion_cuadrado_suavizado}, \ref{fig:evaluacion_de_la_restriccion_cuadrado} y \ref{fig:evaluacion_de_la_restriccion_circulo}.
+El modelo dinámico tiene una restricción en la dirección del movimiento. La que se expresa en la ecuación (\ref{eq:restriccion_1}). Sin embargo esta restricción nos e define para el modelo cinemático. Esta es una limitación en el movimiento del robot, por lo que es importante comprobar que la salida del modelo cinemático sea consistente con las restricciones naturales del sistema. Para esto se obtiene la magnitud e la velocidad del robot y se calcula la expresión en (\ref{eq:restriccion_1}), sin igualar a cero, sino que se calcula el valor. Este resultado se grafica para las 3 simulaciones, y se presenta en las figuras \ref{fig:evaluacion_de_la_restriccion_cuadrado_suavizado}, \ref{fig:evaluacion_de_la_restriccion_cuadrado} y \ref{fig:evaluacion_de_la_restriccion_circulo}.
 
-Primero se debe notar que el error es despreciable. Con un orden de magnitud máximo de $10^{-16}$. Por lo que se puede considerar que del modelo cinemático se obtienen respuestas que son consistentes con las restricciones de movimiento del robot. y por tanto son válidos para poder controlar al robot sin pedirle condiciones ue violen estas condiciones.  Note que en todos los casos se presentan más errores cuando el robot se encuetra girando. Esto porque una condición de deslizamiento lateral es más fácil de alcanzar si se está girando qeu si se avanza en línea recta. Por esot también el círculo permanece son un error alto durante toda la trayectria. 
+Primero se debe notar que el error es despreciable. Con un orden de magnitud máximo de $10^{-16}$. Por lo que se puede considerar que del modelo cinemático se obtienen respuestas que son consistentes con las restricciones de movimiento del robot. y por tanto son válidos para poder controlar al robot sin pedirle condiciones que violen estas condiciones.  Note que en todos los casos se presentan más errores cuando el robot se encuentra girando. Esto porque una condición de deslizamiento lateral es más fácil de alcanzar si se está girando qeu si se avanza en línea recta. Por esot también el círculo permanece son un error alto durante toda la trayectoria. 
 
-Por otra parte, el suavizamiento de la señal de los motores, a¡también agrega errores. Ya que al suavizar la funcioón para evitar aceleraciones inficnitas no se suaviza o amortigua a todas las rueda spor igual. Este amortiguamiento, ocurre sin tomar las restricciones en cuenta. Este amortiguameinto se hace más importante en los giros, porque es donde se dan las discotinuidades. y portanto en los giros se espera un mayor error. EStas dos razons son las qeu provocan los errores observados, pero como se mencionó anteriormente, el aporte es despreciable. 
-
+Por otra parte, el suavizamiento de la señal de los motores, a¡también agrega errores. Ya que al suavizar la función para evitar aceleraciones infinitas no se suaviza o amortigua a todas las rueda spor igual. Este amortiguamiento, ocurre sin tomar las restricciones en cuenta. Este amortiguamiento se hace más importante en los giros, porque es donde se dan las discontinuidades. y por tanto en los giros se espera un mayor error. EStas dos razones son las que provocan los errores observados, pero como se mencionó anteriormente, el aporte es despreciable. 
 
 
 
@@ -1809,11 +1818,11 @@ velocidades angulares.
 \subsection{Modelo cinemático}
 \begin{itemize}
 \item Se logró exitosamente simular el sistema descrito. En las simulaciones se obtienen los resultados observados en el sistema real. Respecto al modelo cinemático, se tiene un modelo que describe correctamente el funcionamiento del sistema real. A pesar que no se toman en consideración las energías del sistema, si el robot se mueve lento, este modelo es suficiente para poder controlarlo. Se debe notar que en el caso de las tres simulaciones, se obtienen los resultados esperados de cada caso. Para poder hacer los resultados de este documento más válidos, se toman los parámetros de un robot real.
- \item El modelo del punto desplazado logra describir de manera correcta el sistema. Además se logra implementar un sistema simple de control, donde se le envía al robot una trayectoria que debe seguir, y este es capaz de seguirla. Aunque tiene algunos errores (principalemnte en als esuinas), se puede afirmar que el robot es capaz de seguir las trayectorias definidas para las simulaciones. Este conrolde velocidd no es suficiente para aplicaciones más finas, donde se necesite mayor exactitud, en estos casos se debe implementar también un control de posición, somo el propuesto en \citep{Marin}. 
- \item El modelo del punto desplazado, permite describir un modelo inverso, este únicamente controla dos grados de libertad. Sin embargo, como se demostró en las simulaciones, la orientación del robot tiende a ser la adecuada. Conforme el robot avanza, la orientación del robot se modifica, pero esta modificación no afecta al proceso de control de la velocidad traslacional, sino que la orientación se va adaptando a la trayectoria. Para trayectos rectos, se observa un comportamiento asintótico entre el punto central y el punto desplazado, lo que indica que es una buena manera de describir a un robot diferencial cinemáticamente. Note que este modelo es muy útil si el robot se debe mantenr avanzando. Si este no es el caso se debe implementar alguno otro método de control que no se requiera de avance traslacional, para controlar la orientación. 
- \item El modelo cinemático (directo e inverso) no toma en cuenta consideraciones sobre las aceleraciones, entonces puede que se generen velocidades discontínuas, al aplicar una entrada. Para evitar este tipo de salidas se implementa un sistema que permite evitar estas discotinuidades, y suavizar las señales que se obtienen. Con estas limitantes en la salida, se vuelve imposible lograr alguna trayectorias específicas, como por ejemplo completar una trayectoria cuadrada a rapidez constante.
- \item Cuando se toma la trayectoria cuadrada con desaceleración cerca de las esquinas para simularla, se evidencia que el robot es capaz de seuir la trayecoria sin necesidad de hacer girar sus ruedas con aceleraciones infinitas. Este es un factor a tomar en cuenta, si se implementa un sistema real de robot diferencial. El robot puede describir con su punto descentralizado, cualquier trayecotria, siempre y cuando se tenga la velocidad adecuada para lograrlo. 
- \item En general, la salida del modelo dinámico, no toma enconsideración de las restricciones del movimiento, que se toman en cuenta por el modelo dinámico. Sin embargo esto no afecta a los resultados, pues de manera indiracta se cumple. Controlar al punto descentralizado, permite que las velocidades del robot no describan movimientos no permitidos. Sin embargo, cuando se agrega el sistema suavizador para evitar aceleraciones infinitas, se está aumentando el error de la restricción. Ya que este sistema amortigua cualquier discotinuidad, pero no amortigua a todas la sseñales por igual, entonces los cambios más abruptos son más amortiguados, y essos amortiguameintos diferentes, peuden provocar errores en als restricciones del movimeinto.
+ \item El modelo del punto desplazado logra describir de manera correcta el sistema. Además se logra implementar un sistema simple de control, donde se le envía al robot una trayectoria que debe seguir, y este es capaz de seguirla. Aunque tiene algunos errores (principalmente en las esquinas), se puede afirmar que el robot es capaz de seguir las trayectorias definidas para las simulaciones. Este control de velocidad no es suficiente para aplicaciones más finas, donde se necesite mayor exactitud, en estos casos se debe implementar también un control de posición, como el propuesto en \citep{Marin}. 
+ \item El modelo del punto desplazado, permite describir un modelo inverso, este únicamente controla dos grados de libertad. Sin embargo, como se demostró en las simulaciones, la orientación del robot tiende a ser la adecuada. Conforme el robot avanza, la orientación del robot se modifica, pero esta modificación no afecta al proceso de control de la velocidad traslacional, sino que la orientación se va adaptando a la trayectoria. Para trayectos rectos, se observa un comportamiento asintótico entre el punto central y el punto desplazado, lo que indica que es una buena manera de describir a un robot diferencial cinemáticamente. Note que este modelo es muy útil si el robot se debe mantener avanzando. Si este no es el caso se debe implementar alguno otro método de control que no se requiera de avance traslacional, para controlar la orientación. 
+ \item El modelo cinemático (directo e inverso) no toma en cuenta consideraciones sobre las aceleraciones, entonces puede que se generen velocidades discontinuas, al aplicar una entrada. Para evitar este tipo de salidas se implementa un sistema que permite evitar estas discontinuidades, y suavizar las señales que se obtienen. Con estas limitantes en la salida, se vuelve imposible lograr alguna trayectorias específicas, como por ejemplo completar una trayectoria cuadrada a rapidez constante.
+ \item Cuando se toma la trayectoria cuadrada con desaceleración cerca de las esquinas para simularla, se evidencia que el robot es capaz de seguir la trayectoria sin necesidad de hacer girar sus ruedas con aceleraciones infinitas. Este es un factor a tomar en cuenta, si se implementa un sistema real de robot diferencial. El robot puede describir con su punto descentralizado, cualquier trayectoria, siempre y cuando se tenga la velocidad adecuada para lograrlo. 
+ \item En general, la salida del modelo dinámico, no toma enconsideración de las restricciones del movimiento, que se toman en cuenta por el modelo dinámico. Sin embargo esto no afecta a los resultados, pues de manera indiracta se cumple. Controlar al punto descentralizado, permite que las velocidades del robot no describan movimientos no permitidos. Sin embargo, cuando se agrega el sistema suavizador para evitar aceleraciones infinitas, se está aumentando el error de la restricción. Ya que este sistema amortigua cualquier discotinuidad, pero no amortigua a todas la sseñales por igual, entonces los cambios más abruptos son más amortiguados, y essos amortiguamientos diferentes, peuden provocar errores en als restricciones del movimeinto.
 \end{itemize}
 
 \subsection{Modelo dinámico}
